Correct the german typo in "Version" -> "Verzion" signaled (unpolitely) by DanielPeyer(at)gmx(dot)ch. [I thought that Swiss were more open to multilinguism difficulties...]

--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -684,7 +684,7 @@ RESULT_PANEL_LOCATION=Quelle
 #### RESULT_PANEL_COUNT=#
 RESULT_PANEL_COUNT=Nr.
 #### RESULT_PANEL_VENDOR=Vendor
-RESULT_PANEL_VENDOR=Hersteller/Version
+RESULT_PANEL_VENDOR=Hersteller
 #### RESULT_PANEL_ADDED=Created
 RESULT_PANEL_ADDED=Erstellt
 
@@ -873,7 +873,7 @@ DOWNLOAD_SPEED_COLUMN=Geschwindigkeit
 #### DOWNLOAD_TIME_REMAINING_COLUMN=Time
 DOWNLOAD_TIME_REMAINING_COLUMN=Zeit
 #### DOWNLOAD_SERVER_COLUMN=Vendor/Version
-DOWNLOAD_SERVER_COLUMN=Hersteller/Version
+DOWNLOAD_SERVER_COLUMN=Hersteller/Verzion
 #### DOWNLOAD_STATUS_QUEUED=Queued
 DOWNLOAD_STATUS_QUEUED=In Warteschlange
 #### DOWNLOAD_STATUS_CONNECTING=Connecting...
@@ -989,7 +989,7 @@ UPLOAD_TABLE_STRING_SPEED=Geschwindigkeit
 #### UPLOAD_TABLE_STRING_TIME_REMAINING=Time
 UPLOAD_TABLE_STRING_TIME_REMAINING=Zeit
 #### UPLOAD_TABLE_STRING_USER_AGENT=Vendor/Version
-UPLOAD_TABLE_STRING_USER_AGENT=Hersteller/Version
+UPLOAD_TABLE_STRING_USER_AGENT=Hersteller/Verzion
 #### UPLOAD_TABLE_STRING_CONNECTING=Connecting
 UPLOAD_TABLE_STRING_CONNECTING=Verbinde
 #### UPLOAD_TABLE_STRING_UPLOADING=Uploading
@@ -1080,7 +1080,7 @@ CV_COLUMN_HOSTS=Anz. Rechner
 #### CV_COLUMN_PROTOCOL=Protocol
 CV_COLUMN_PROTOCOL=Protokoll
 #### CV_COLUMN_VENDOR=Vendor/Version
-CV_COLUMN_VENDOR=Hersteller/Version
+CV_COLUMN_VENDOR=Hersteller/Verzion
 #### CV_COLUMN_TIME=Time
 CV_COLUMN_TIME=Dauer
 #### CV_COLUMN_COMPRESSION=Compressed (I/O)
@@ -1313,7 +1313,7 @@ GO_PRO_TIP=LimeWire PRO. Jetzt.
 #### WHYGOPRO=Why
 WHYGOPRO=Warum PRO?
 #### WHYGOPRO_TIP=What does PRO give me?
-WHYGOPRO_TIP=Was bietet Ihnen die PRO-Version?
+WHYGOPRO_TIP=Was bietet Ihnen die PRO-Verzion?
 #### GO_PRO_LATER=Later
 GO_PRO_LATER=Später
 #### GO_PRO_LATER_TIP=Get LimeWire PRO Later
@@ -1590,11 +1590,11 @@ SUPPORT_LIMEWIRE_11=Ünterstüzen Sie das Teilen von unabhängigen Medieninhalten.
 #### UPDATE_DIALOG_CAPTION=Update LimeWire
 UPDATE_DIALOG_CAPTION=LimeWire-Aktualisierung
 #### UPDATE_MESSAGE=A newer version of LimeWire was detected on the network. Please update to version
-UPDATE_MESSAGE=Im Netzwerk wurde eine neuere Version gefunden. Bitte aktualisieren Sie LimeWire auf Version
+UPDATE_MESSAGE=Im Netzwerk wurde eine neuere Verzion gefunden. Bitte aktualisieren Sie LimeWire auf Verzion
 #### UPDATE_MESSAGE_SMALL=A newer version is available, update?
 UPDATE_MESSAGE_SMALL=Eine neuere Verzion ist fertig, aktualisieren?
 #### UPDATE_SUCCEEDED_MESSAGE=Your LimeWire update has successfully completed. Please restart LimeWire to use your new version.
-UPDATE_SUCCEEDED_MESSAGE=Die LimeWire-Aktualisierung war erfolgreich. Bitte starten Sie LimeWire erneut, um die neue Version zu verwenden.
+UPDATE_SUCCEEDED_MESSAGE=Die LimeWire-Aktualisierung war erfolgreich. Bitte starten Sie LimeWire erneut, um die neue Verzion zu verwenden.
 #### UPDATE_WEB_PAGE_ERROR_MESSAGE=There was an error opening the LimeWire web page for performing the update. To complete your update, please open your browser to http://www.limewire.com.
 UPDATE_WEB_PAGE_ERROR_MESSAGE=Bei der Update-Verbindung zur LimeWire-Website ist ein Fehler aufgetreten. Um die Aktualisierung abzuschließen, gehen Sie bitte im Internet-Browser zu http://www.limewire.com/.
 #### UPDATE_ERROR_MESSAGE_START=Your LimeWire update has encountered the following error:
@@ -1847,7 +1847,7 @@ ERROR_BROWSE_HOST_FAILED_END_KEY=konnte nicht durchsucht werden.
 #### ERROR_INVALID_THEME_FILE=The skin file you selected does not exist or is invalid. Please choose another file, or use the default.
 ERROR_INVALID_THEME_FILE=Die gewählte Motivdatei ist nicht vorhanden oder ungültig. Bitte wählen Sie eine andere aus oder benutzen sie die Standardvorgabe.
 #### ERROR_THEME_OUT_OF_DATE=The skin you selected is out of date. Please download the latest version of the skin.
-ERROR_THEME_OUT_OF_DATE=Die gewählte Motivdatei ist überaltert. Bitte herunterladen Sie die neue Version dieser Motivdatei.
+ERROR_THEME_OUT_OF_DATE=Die gewählte Motivdatei ist überaltert. Bitte herunterladen Sie die neue Verzion dieser Motivdatei.
 #### ERROR_THEME_OUT_OF_DATE_TITLE=Invalid Skin
 ERROR_THEME_OUT_OF_DATE_TITLE=Ungültige Motivdatei
 #### ERROR_THEME_OUT_OF_DATE_GET_MORE=Get New Skins
@@ -3617,7 +3617,7 @@ ERROR_VENDOR_INVALID_ID=Ungültig ID
 #### ERROR_VENDOR_INVALID_SELECTOR=Invalid Selector
 ERROR_VENDOR_INVALID_SELECTOR=Ungültig Wähler
 #### ERROR_VENDOR_INVALID_VERSION=Invalid Version
-ERROR_VENDOR_INVALID_VERSION=Ungültig Version
+ERROR_VENDOR_INVALID_VERSION=Ungültig Verzion
 #### ERROR_VENDOR_INVALID_PAYLOAD=Invalid Payload
 ERROR_VENDOR_INVALID_PAYLOAD=Ungültig Mitteilung
 #### ERROR_VENDOR_UNRECOGNIZED=Unrecognized Vendor Message
