new msgs for cc stuff.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1073,6 +1073,14 @@ ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search 
 # Messages for Creative Commons Licensing
 ################################################################################
 LICENSE_CC_TITLE=License Details
+LICENSE_CC_LOCATING=LimeWire is currently locating the details of this license.
+LICENSE_CC_UNVERIFIED=LimeWire has not yet verified this license.  Click 'verify' to locate the details of this Creative Commons license.
+LICENSE_CC_VERIFY=Verify
+LICENSE_CC_INVALID=LimeWire was unable to locate the details of this license.
+LICENSE_CC_DETAILS=License Details:
+LICENSE_CC_DEED=View License Deed
+LICENSE_CC_VERIFICATION=View Verification Page
+
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
