updated to guess where the license deed is and display more info if we can't verify.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1078,6 +1078,7 @@ LICENSE_CC_UNVERIFIED=LimeWire has not yet verified this license.  Click 'verify
 LICENSE_CC_VERIFY=Verify
 LICENSE_CC_INVALID=LimeWire was unable to locate the details of this license.
 LICENSE_CC_DETAILS=License Details:
+LICENSE_CC_CLAIMED_DEED=View Claimed License Deed
 LICENSE_CC_DEED=View License Deed
 LICENSE_CC_VERIFICATION=View Verification Page
 
