add 'view license' menu option to search results.  add stub BadLicense for licenses where we can't find a license URI.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1072,6 +1072,7 @@ ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search 
 ################################################################################
 # Messages for Creative Commons Licensing
 ################################################################################
+LICENSE_CC_VIEW_LICENSE=View License
 LICENSE_CC_TITLE=License Details
 LICENSE_CC_LOCATING=LimeWire is currently locating the details of this license.
 LICENSE_CC_UNVERIFIED=LimeWire has not yet verified this license.  Click 'verify' to locate the details of this Creative Commons license.
