This one was deleted by synchronization, because the leading comment mark was not removed in the last commit. Restore it as it was part of the last contributed translation.

--- a/lib/messagebundles/MessagesBundle_no.properties
+++ b/lib/messagebundles/MessagesBundle_no.properties
@@ -1686,7 +1686,7 @@ NO_INTERNET=Din maskin har ikke en aktiv Internett-tilkobling, eller en brannmur
 # keep trying.
 ################################################################################
 #### NO_INTERNET_RETRYING=Your machine does not appear to have an active Internet connection or a firewall is blocking LimeWire from accessing the internet. LimeWire will automatically keep trying to connect you to the network unless you select "Disconnect" from the File menu.
-#? NO_INTERNET_RETRYING=
+NO_INTERNET_RETRYING=Din maskin har ikke en aktiv Internett-tilkobling, eller en brannmur blokkerer LimeWire fra å få tilgang til Internett. LimeWire vil automatisk prøve å koble deg til nettverket med mindre du velger "Koble fra" fra Fil-menyen.
 
 ################################################################################
 # Key/value pair for the message shown when LimeWire is trying to connect
