New text to support GUI elements allowing filtering of results excluding cerain files based on URN

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -347,6 +347,8 @@ SEARCH_PUBLIC_MAGNET_LOOKUP_STRING=Magnet details for file
 SEARCH_PUBLIC_HTTP_PAGE_STRING=Web page for file(s)
 SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Repeat Search
 SEARCH_PUBLIC_BLOCK_STRING=Block Host
+SEARCH_PUBLIC_BLOCK_FILE_STRING=Exclude File From Future Results
+SEARCH_PUBLIC_UNBLOCK_ALL_FILES_STRING=Exclude Nothing From Future Results
 SEARCH_RESULT_TABLE_LABEL=Results
 SEARCH_SEARCHING_LABEL=Searching...
 SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
@@ -375,6 +377,7 @@ SEARCH_SELECT_TYPE=Select Type:
 SEARCH_FILTER_RESULTS=Filter Results:
 SEARCH_BACK_TO_SEARCH=Back To Search
 SEARCH_BLOCK_HOST=Do you want to block search results from the host at
+SEARCH_UNBLOCK_ALL_FILES=Are you sure you want to exclude nothing from future results?
 
 #Media Types
 MEDIA_ANY_TYPE=Any Type
