updates for NSIS installer.

--- a/lib/messagebundles/MessagesBundle_id.properties
+++ b/lib/messagebundles/MessagesBundle_id.properties
@@ -12,6 +12,7 @@ LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin
 LOCALE_ENGLISH_LANGUAGE_NAME=Indonesian
+LOCALE_NSIS_NAME=Indonesian
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
