--- a/lib/messagebundles/MessagesBundle_pt_BR.properties
+++ b/lib/messagebundles/MessagesBundle_pt_BR.properties
@@ -12,6 +12,7 @@ LOCALE_VARIANT_NAME=Brasileiro
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin
 LOCALE_ENGLISH_LANGUAGE_NAME=Portuguese (Brasilian)
+LOCALE_NSIS_NAME=PortugueseBR
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
