--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -12,6 +12,7 @@ LOCALE_VARIANT_NAME=Castilliano
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin
 LOCALE_ENGLISH_LANGUAGE_NAME=Spanish
+LOCALE_NSIS_NAME=Spanish
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
