--- a/lib/messagebundles/MessagesBundle_no.properties
+++ b/lib/messagebundles/MessagesBundle_no.properties
@@ -12,6 +12,7 @@ LOCALE_VARIANT_NAME=Bokmål
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin
 LOCALE_ENGLISH_LANGUAGE_NAME=Norwegian (Books)
+LOCALE_NSIS_NAME=Norwegian
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
