Change 2004 to 2005 in copyrights (all bundles) New started Affrikaans translation (by Jacques Coetsee): 20% completed only

--- a/lib/messagebundles/MessagesBundle_da.properties
+++ b/lib/messagebundles/MessagesBundle_da.properties
@@ -12,6 +12,7 @@ LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin
 LOCALE_ENGLISH_LANGUAGE_NAME=Danish
+#? LOCALE_NSIS_NAME=
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
@@ -146,8 +147,8 @@ ABOUT_TITLE=Om LimeWire
 ABOUT_LABEL_START=LimeWire klient
 #### ABOUT_LABEL_ADDRESS=http://www.limewire.com
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-#### ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
-ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
+#### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
+ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 #### ABOUT_LABEL_TITLE=About LimeWire
 ABOUT_LABEL_TITLE=Om LimeWire
 #### ABOUT_CREDITS_LABEL=Credits
@@ -687,6 +688,8 @@ RESULT_PANEL_COUNT=#
 RESULT_PANEL_VENDOR=Producent
 #### RESULT_PANEL_ADDED=Created
 RESULT_PANEL_ADDED=Frembragt
+#### RESULT_PANEL_LICENSE=License
+#? RESULT_PANEL_LICENSE=
 
 #Filter labels.
 #### SEARCH_FILTER_ALL=All
@@ -1163,6 +1166,8 @@ LIBRARY_TABLE_PATH=Sti
 LIBRARY_TABLE_HITCOUNT=Hits
 #### LIBRARY_TABLE_NUMALTLOC=Locations
 LIBRARY_TABLE_NUMALTLOC=Adresser
+#### LIBRARY_TABLE_LICENSE=License
+#? LIBRARY_TABLE_LICENSE=
 #### LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 #### LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
@@ -1410,6 +1415,8 @@ META_EDITOR_LINK_LABEL=Link:
 META_EDITOR_ACTION_LABEL=Aktion:
 #### META_EDITOR_STARS_LABEL=Stars:
 META_EDITOR_STARS_LABEL=Stjerner:
+#### META_EDITOR_LICENSE_LABEL=License:
+#? META_EDITOR_LICENSE_LABEL=
 
 #### META_EDITOR_SIZE_LABEL=Size:
 META_EDITOR_SIZE_LABEL=Str.:
@@ -1804,18 +1811,8 @@ NO_PREVIEW_END=.
 ERROR_CANT_RESUME_START=Filen
 #### ERROR_CANT_RESUME_END=is not a valid incomplete file and cannot be resumed.
 ERROR_CANT_RESUME_END=er ikke en gyldig ufuldstændig fil og kan ikke genoptages download for.
-#### ERROR_LOCATING_BROWSER_THEMES=LimeWire could not locate your browser. The LimeWire skins address is:\n"http://www.limewire.com/skins".
-ERROR_LOCATING_BROWSER_THEMES=LimeWire kunne ikke finde din browser. LimeWire tema adressen er:\n"http://www.limewire.com".
-#### ERROR_LOCATING_BROWSER_SUPPORT=LimeWire could not locate your browser. The LimeWire support address is:\n"http://www.limewire.com/support".
-ERROR_LOCATING_BROWSER_SUPPORT=LimeWire kunne ikke finde din browser. LimeWire support adressen er:\n"http://www.limewire.com/support".
-#### ERROR_LOCATING_BROWSER_FAQ=LimeWire could not locate your browser. The LimeWire FAQ address is:\n"http://www.limewire.com/support/faq.htm".
-ERROR_LOCATING_BROWSER_FAQ=LimeWire kunne ikke finde din browser. LimeWire FAQ adressen er:\n"http://www.limewire.com/support/faq.htm".
-#### ERROR_LOCATING_BROWSER_FORUM=LimeWire could not locate your browser. The LimeWire forum address is:\n"http://www.limewire.com/forum.htm".
-ERROR_LOCATING_BROWSER_FORUM=LimeWire kunne ikke finde din browser. LimeWire forum adressen er:\n"http://www.limewire.com/forum.htm".
-#### ERROR_LOCATING_BROWSER_FRIEND=LimeWire could not locate your browser. The LimeWire "Tell a friend" form address is:\n"http://www.limewire.com/index.jsp/tell_friend".
-ERROR_LOCATING_BROWSER_FRIEND=LimeWire kunne ikke finde din browser. LimeWire "Tip en ven" adressen er:\n"http://www.limewire.com/index.jsp/tell_friend".
-#### ERROR_LOCATING_BROWSER_GENERAL=LimeWire could not locate your default browser.
-ERROR_LOCATING_BROWSER_GENERAL=LimeWire kunne ikke finde din standardbrowser.
+#### ERROR_OPEN_URL=LimeWire could not locate your web browser to display the following webpage:
+#? ERROR_OPEN_URL=
 #### ERROR_ACCESSING_SAVE_DIRECTORY=Could not access the save directory. Please select a new save directory in the Options menu and try again.
 ERROR_ACCESSING_SAVE_DIRECTORY=Kunne ikke tilgå arkivmappen. Vælg venligst en ny arkivmappe i indstillingsmenuen og forsøg igen.
 #### ERROR_DEL_META_USER=Cannot remove unsaved info.
@@ -1870,6 +1867,33 @@ ERROR_PROPS_CORRUPTED=En fil som blev brugt til at gemme dine præferencer er øde
 ERROR_SEARCH_TOO_LARGE=Din søgning er for lang. Gør venligst din søgning mindre og prøv igen.
 #### ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search smaller and try again.
 ERROR_XML_SEARCH_TOO_LARGE=Din søgning er for specifik. Juster venligst din søgning og prøv igen.
+
+################################################################################
+# Messages for Creative Commons Licensing
+################################################################################
+#### LICENSE_CC_VIEW_LICENSE=View License
+#? LICENSE_CC_VIEW_LICENSE=
+#### LICENSE_CC_TITLE=License Details
+#? LICENSE_CC_TITLE=
+#### LICENSE_CC_LOCATING=LimeWire is currently locating the details of this license.
+#? LICENSE_CC_LOCATING=
+#### LICENSE_CC_UNVERIFIED=LimeWire has not yet verified this license.  Click 'verify' to locate the details of this Creative Commons license.
+#? LICENSE_CC_UNVERIFIED=
+#### LICENSE_CC_VERIFY=Verify
+#? LICENSE_CC_VERIFY=
+#### LICENSE_CC_INVALID=LimeWire was unable to locate the details of this license.
+#? LICENSE_CC_INVALID=
+#### LICENSE_CC_RETRY=You can try validating this license again by clicking 'Verify'.
+#? LICENSE_CC_RETRY=
+#### LICENSE_CC_DETAILS=License Details:
+#? LICENSE_CC_DETAILS=
+#### LICENSE_CC_CLAIMED_DEED=View Claimed License Deed
+#? LICENSE_CC_CLAIMED_DEED=
+#### LICENSE_CC_DEED=View License Deed
+#? LICENSE_CC_DEED=
+#### LICENSE_CC_VERIFICATION=View Verification Page
+#? LICENSE_CC_VERIFICATION=
+
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
