--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -12,6 +12,7 @@ LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Hira
 LOCALE_SCRIPT_NAME=Far-East Asian
 LOCALE_ENGLISH_LANGUAGE_NAME=Japanese
+LOCALE_NSIS_NAME=Japanese
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
@@ -146,8 +147,8 @@ ABOUT_TITLE=LimeWire \u306b\u3064\u3044\u3066\u306e\u60c5\u5831
 ABOUT_LABEL_START=LimeWire \u30af\u30e9\u30a4\u30a2\u30f3\u30c8
 #### ABOUT_LABEL_ADDRESS=http://www.limewire.com
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-#### ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
-ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
+#### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
+ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 #### ABOUT_LABEL_TITLE=About LimeWire
 ABOUT_LABEL_TITLE=LimeWire \u306b\u3064\u3044\u3066
 #### ABOUT_CREDITS_LABEL=Credits
@@ -687,6 +688,8 @@ RESULT_PANEL_COUNT=\u6570
 RESULT_PANEL_VENDOR=\u958b\u767a\u5143
 #### RESULT_PANEL_ADDED=Created
 RESULT_PANEL_ADDED=\u4f5c\u6210
+#### RESULT_PANEL_LICENSE=License
+#? RESULT_PANEL_LICENSE=
 
 #Filter labels.
 #### SEARCH_FILTER_ALL=All
@@ -1163,6 +1166,8 @@ LIBRARY_TABLE_PATH=\u30d1\u30b9
 LIBRARY_TABLE_HITCOUNT=\u30d2\u30c3\u30c8
 #### LIBRARY_TABLE_NUMALTLOC=Locations
 LIBRARY_TABLE_NUMALTLOC=\u4f4d\u7f6e
+#### LIBRARY_TABLE_LICENSE=License
+#? LIBRARY_TABLE_LICENSE=
 #### LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TABLE_UPLOAD_COUNT=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
 #### LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
@@ -1410,6 +1415,8 @@ META_EDITOR_LINK_LABEL=\u30ea\u30f3\u30af\uff1a
 META_EDITOR_ACTION_LABEL=\u30a2\u30af\u30b7\u30e7\u30f3\uff1a
 #### META_EDITOR_STARS_LABEL=Stars:
 META_EDITOR_STARS_LABEL=\u661f\uff1a
+#### META_EDITOR_LICENSE_LABEL=License:
+#? META_EDITOR_LICENSE_LABEL=
 
 #### META_EDITOR_SIZE_LABEL=Size:
 META_EDITOR_SIZE_LABEL=\u5bb9\u91cf\uff1a
@@ -1804,18 +1811,8 @@ NO_PREVIEW_END=
 ERROR_CANT_RESUME_START=\u3053\u306e\u30d5\u30a1\u30a4\u30eb\u306f\u6b63\u3057\u3044\u4e0d\u5b8c\u5168\u30d5\u30a1\u30a4\u30eb\u3067\u306f\u306a\u3044\u306e\u3067\u30ec\u30b8\u30e5\u30fc\u30e0\u3067\u304d\u307e\u305b\u3093\u3002
 #### ERROR_CANT_RESUME_END=is not a valid incomplete file and cannot be resumed.
 ERROR_CANT_RESUME_END=
-#### ERROR_LOCATING_BROWSER_THEMES=LimeWire could not locate your browser. The LimeWire skins address is:\n"http://www.limewire.com/skins".
-ERROR_LOCATING_BROWSER_THEMES=\u304a\u4f7f\u3044\u306e\u30d6\u30e9\u30a6\u30b6\u3092\u7279\u5b9a\u3067\u304d\u307e\u305b\u3093\u3002 LimeWire \u30b9\u30ad\u30f3\u30a2\u30c9\u30ec\u30b9\u306f\uff1a\n"http://www.limewire.com/skins" \u3067\u3059\u3002
-#### ERROR_LOCATING_BROWSER_SUPPORT=LimeWire could not locate your browser. The LimeWire support address is:\n"http://www.limewire.com/support".
-ERROR_LOCATING_BROWSER_SUPPORT=\u304a\u4f7f\u3044\u306e\u30d6\u30e9\u30a6\u30b6\u3092\u7279\u5b9a\u3067\u304d\u307e\u305b\u3093\u3002 LimeWire \u30b5\u30dd\u30fc\u30c8\u30a2\u30c9\u30ec\u30b9\u306f\uff1a\n"http://www.limewire.com/support" \u3067\u3059\u3002
-#### ERROR_LOCATING_BROWSER_FAQ=LimeWire could not locate your browser. The LimeWire FAQ address is:\n"http://www.limewire.com/support/faq.htm".
-ERROR_LOCATING_BROWSER_FAQ=\u304a\u4f7f\u3044\u306e\u30d6\u30e9\u30a6\u30b6\u3092\u7279\u5b9a\u3067\u304d\u307e\u305b\u3093\u3002 LimeWire FAQ \u30a2\u30c9\u30ec\u30b9\u306f\uff1a\n"http://www.limewire.com/support/faq.htm" \u3067\u3059\u3002
-#### ERROR_LOCATING_BROWSER_FORUM=LimeWire could not locate your browser. The LimeWire forum address is:\n"http://www.limewire.com/forum.htm".
-ERROR_LOCATING_BROWSER_FORUM=\u304a\u4f7f\u3044\u306e\u30d6\u30e9\u30a6\u30b6\u3092\u7279\u5b9a\u3067\u304d\u307e\u305b\u3093\u3002 LimeWire \u63b2\u793a\u677f\u30a2\u30c9\u30ec\u30b9\u306f\uff1a\n"http://www.limewire.com/forum.htm" \u3067\u3059\u3002
-#### ERROR_LOCATING_BROWSER_FRIEND=LimeWire could not locate your browser. The LimeWire "Tell a friend" form address is:\n"http://www.limewire.com/index.jsp/tell_friend".
-ERROR_LOCATING_BROWSER_FRIEND=\u304a\u4f7f\u3044\u306e\u30d6\u30e9\u30a6\u30b6\u3092\u7279\u5b9a\u3067\u304d\u307e\u305b\u3093\u3002 "\u53cb\u4eba\u306b\u77e5\u3089\u305b\u308b" \u30d5\u30a9\u30fc\u30e0\u30a2\u30c9\u30ec\u30b9\u306f\uff1a\n"http://www.limewire.com/index.jsp/tell_friend" \u3067\u3059\u3002
-#### ERROR_LOCATING_BROWSER_GENERAL=LimeWire could not locate your default browser.
-ERROR_LOCATING_BROWSER_GENERAL=\u304a\u4f7f\u3044\u306e\u6a19\u6e96\u30d6\u30e9\u30a6\u30b6\u3092\u7279\u5b9a\u3067\u304d\u307e\u305b\u3093\u3002
+#### ERROR_OPEN_URL=LimeWire could not locate your web browser to display the following webpage:
+#? ERROR_OPEN_URL=
 #### ERROR_ACCESSING_SAVE_DIRECTORY=Could not access the save directory. Please select a new save directory in the Options menu and try again.
 ERROR_ACCESSING_SAVE_DIRECTORY=\u4fdd\u5b58\u5148\u30d5\u30a9\u30eb\u30c0\u306b\u30a2\u30af\u30bb\u30b9\u3067\u304d\u307e\u305b\u3093\u3002 \u30aa\u30d7\u30b7\u30e7\u30f3\u30e1\u30cb\u30e5\u30fc\u304b\u3089\u65b0\u898f\u30d5\u30a9\u30eb\u30c0\u3092\u9078\u629e\u3057\u3066\u3082\u3046\u4e00\u5ea6\u8a66\u3057\u3066\u4e0b\u3055\u3044\u3002
 #### ERROR_DEL_META_USER=Cannot remove unsaved info.
@@ -1870,6 +1867,33 @@ ERROR_PROPS_CORRUPTED=\u74b0\u5883\u8a2d\u5b9a\u3092\u4fdd\u5b58\u3059\u308b\u30
 ERROR_SEARCH_TOO_LARGE=\u691c\u7d22\u304c\u9577\u3059\u304e\u307e\u3059\u3002\u691c\u7d22\u3092\u3082\u3063\u3068\u5c0f\u3055\u304f\u3057\u3066\u518d\u8a66\u884c\u3057\u3066\u4e0b\u3055\u3044\u3002
 #### ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search smaller and try again.
 ERROR_XML_SEARCH_TOO_LARGE=\u691c\u7d22\u304c\u9577\u3059\u304e\u307e\u3059\u3002\u691c\u7d22\u3092\u3082\u3063\u3068\u5c0f\u3055\u304f\u3057\u3066\u518d\u8a66\u884c\u3057\u3066\u4e0b\u3055\u3044\u3002
+
+################################################################################
+# Messages for Creative Commons Licensing
+################################################################################
+#### LICENSE_CC_VIEW_LICENSE=View License
+#? LICENSE_CC_VIEW_LICENSE=
+#### LICENSE_CC_TITLE=License Details
+#? LICENSE_CC_TITLE=
+#### LICENSE_CC_LOCATING=LimeWire is currently locating the details of this license.
+#? LICENSE_CC_LOCATING=
+#### LICENSE_CC_UNVERIFIED=LimeWire has not yet verified this license.  Click 'verify' to locate the details of this Creative Commons license.
+#? LICENSE_CC_UNVERIFIED=
+#### LICENSE_CC_VERIFY=Verify
+#? LICENSE_CC_VERIFY=
+#### LICENSE_CC_INVALID=LimeWire was unable to locate the details of this license.
+#? LICENSE_CC_INVALID=
+#### LICENSE_CC_RETRY=You can try validating this license again by clicking 'Verify'.
+#? LICENSE_CC_RETRY=
+#### LICENSE_CC_DETAILS=License Details:
+#? LICENSE_CC_DETAILS=
+#### LICENSE_CC_CLAIMED_DEED=View Claimed License Deed
+#? LICENSE_CC_CLAIMED_DEED=
+#### LICENSE_CC_DEED=View License Deed
+#? LICENSE_CC_DEED=
+#### LICENSE_CC_VERIFICATION=View Verification Page
+#? LICENSE_CC_VERIFICATION=
+
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
