--- a/lib/messagebundles/MessagesBundle_ar.properties
+++ b/lib/messagebundles/MessagesBundle_ar.properties
@@ -12,6 +12,7 @@ LOCALE_VARIANT_NAME=\u062f\u0648\u0644\u064a
 LOCALE_SCRIPT_CODE=Arab
 LOCALE_SCRIPT_NAME=Arabic
 LOCALE_ENGLISH_LANGUAGE_NAME=Arabic
+LOCALE_NSIS_NAME=Arabic
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
@@ -146,8 +147,8 @@ ABOUT_TITLE=\u062d\u0648\u0644 LimeWire
 ABOUT_LABEL_START=\u0645\u0633\u062a\u062e\u062f\u0645 LimeWire
 #### ABOUT_LABEL_ADDRESS=http://www.limewire.com
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-#### ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
-ABOUT_LABEL_END=\u062c\u0645\u064a\u0639 \u0627\u0644\u062d\u0642\u0648\u0642 \u0645\u062d\u0641\u0648\u0638\u0629 (c)2000-2004 Lime Wire LLC
+#### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
+ABOUT_LABEL_END=\u062c\u0645\u064a\u0639 \u0627\u0644\u062d\u0642\u0648\u0642 \u0645\u062d\u0641\u0648\u0638\u0629 (c)2000-2005 Lime Wire LLC
 #### ABOUT_LABEL_TITLE=About LimeWire
 ABOUT_LABEL_TITLE=\u062d\u0648\u0644 LimeWire
 #### ABOUT_CREDITS_LABEL=Credits
@@ -687,6 +688,8 @@ RESULT_PANEL_COUNT=#
 RESULT_PANEL_VENDOR=\u0627\u0644\u0628\u0627\u0626\u0639
 #### RESULT_PANEL_ADDED=Created
 #? RESULT_PANEL_ADDED=
+#### RESULT_PANEL_LICENSE=License
+#? RESULT_PANEL_LICENSE=
 
 #Filter labels.
 #### SEARCH_FILTER_ALL=All
@@ -1163,6 +1166,8 @@ LIBRARY_TABLE_PATH=\u0627\u0644\u0645\u0633\u0627\u0631
 LIBRARY_TABLE_HITCOUNT=\u0646\u062a\u0627\u0626\u062c
 #### LIBRARY_TABLE_NUMALTLOC=Locations
 LIBRARY_TABLE_NUMALTLOC=\u0627\u0644\u0645\u0648\u0627\u0642\u0639
+#### LIBRARY_TABLE_LICENSE=License
+#? LIBRARY_TABLE_LICENSE=
 #### LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TABLE_UPLOAD_COUNT=\u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u062d\u0645\u0644\u0629
 #### LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
@@ -1410,6 +1415,8 @@ META_EDITOR_SHA1_LABEL=SHA1:
 #? META_EDITOR_ACTION_LABEL=
 #### META_EDITOR_STARS_LABEL=Stars:
 #? META_EDITOR_STARS_LABEL=
+#### META_EDITOR_LICENSE_LABEL=License:
+#? META_EDITOR_LICENSE_LABEL=
 
 #### META_EDITOR_SIZE_LABEL=Size:
 META_EDITOR_SIZE_LABEL=\u0627\u0644\u062d\u062c\u0645:
@@ -1804,18 +1811,8 @@ ERROR_ALREADY_EXISTS=\u0644\u0642\u062f \u0642\u0645\u062a \u0628\u0627\u0644\u0
 ERROR_CANT_RESUME_START=\u0644\u0627 \u064a\u0628\u062f\u0648 \u0627\u0644\u0645\u0644\u0641 \u0646\u0627\u0642\u0635\u0627 \u0648\u0644\u0627 \u064a\u0645\u0643\u0646 \u0625\u0643\u0645\u0627\u0644 \u062a\u0646\u0632\u064a\u0644\u0647
 #### ERROR_CANT_RESUME_END=is not a valid incomplete file and cannot be resumed.
 ERROR_CANT_RESUME_END=\u0627\u0644\u0645\u0644\u0641.
-#### ERROR_LOCATING_BROWSER_THEMES=LimeWire could not locate your browser. The LimeWire skins address is:\n"http://www.limewire.com/skins".
-ERROR_LOCATING_BROWSER_THEMES=\u0644\u0645 \u064a\u062a\u0645\u0643\u0646 LimeWire \u0645\u0646 \u062a\u062d\u062f\u064a\u062f \u0627\u0644\u0645\u062a\u0635\u0641\u062d \u0627\u0644\u062e\u0627\u0635 \u0628\u0643. \u0639\u0646\u0648\u0627\u0646 \u0633\u0645\u0627\u062a LimeWire \u0647\u0648:\n"http://www.limewire.com/skins".
-#### ERROR_LOCATING_BROWSER_SUPPORT=LimeWire could not locate your browser. The LimeWire support address is:\n"http://www.limewire.com/support".
-ERROR_LOCATING_BROWSER_SUPPORT=\u0644\u0645 \u064a\u062a\u0645\u0643\u0646 LimeWire \u0645\u0646 \u062a\u062d\u062f\u064a\u062f \u0627\u0644\u0645\u062a\u0635\u0641\u062d \u0627\u0644\u062e\u0627\u0635 \u0628\u0643. \u0639\u0646\u0648\u0627\u0646 \u062f\u0639\u0645 LimeWire \u0647\u0648:\n"http://www.limewire.com/support".
-#### ERROR_LOCATING_BROWSER_FAQ=LimeWire could not locate your browser. The LimeWire FAQ address is:\n"http://www.limewire.com/support/faq.htm".
-ERROR_LOCATING_BROWSER_FAQ=\u0644\u0645 \u064a\u062a\u0645\u0643\u0646 LimeWire \u0645\u0646 \u062a\u062d\u062f\u064a\u062f \u0627\u0644\u0645\u062a\u0635\u0641\u062d \u0627\u0644\u062e\u0627\u0635 \u0628\u0643. \u0639\u0646\u0648\u0627\u0646 LimeWire FAQ \u0647\u0648:\n"http://www.limewire.com/support/faq.htm".
-#### ERROR_LOCATING_BROWSER_FORUM=LimeWire could not locate your browser. The LimeWire forum address is:\n"http://www.limewire.com/forum.htm".
-ERROR_LOCATING_BROWSER_FORUM=\u0644\u0645 \u064a\u062a\u0645\u0643\u0646 LimeWire \u0645\u0646 \u062a\u062d\u062f\u064a\u062f \u0627\u0644\u0645\u062a\u0635\u0641\u062d \u0627\u0644\u062e\u0627\u0635 \u0628\u0643. \u0639\u0646\u0648\u0627\u0646 \u0633\u0627\u062d\u0629 \u062d\u0648\u0627\u0631 LimeWire \u0647\u0648:\n"http://www.limewire.com/forum.htm".
-#### ERROR_LOCATING_BROWSER_FRIEND=LimeWire could not locate your browser. The LimeWire "Tell a friend" form address is:\n"http://www.limewire.com/index.jsp/tell_friend".
-ERROR_LOCATING_BROWSER_FRIEND=\u0644\u0645 \u064a\u062a\u0645\u0643\u0646 LimeWire \u0645\u0646 \u062a\u062d\u062f\u064a\u062f \u0627\u0644\u0645\u062a\u0635\u0641\u062d \u0627\u0644\u062e\u0627\u0635 \u0628\u0643. \u0639\u0646\u0648\u0627\u0646 \u0646\u0645\u0648\u0630\u062c "\u0623\u062e\u0628\u0631 \u0635\u062f\u064a\u0642\u0627" \u0639\u0646 LimeWire \u0647\u0648:\n"http://www.limewire.com/index.jsp/tell_friend".
-#### ERROR_LOCATING_BROWSER_GENERAL=LimeWire could not locate your default browser.
-ERROR_LOCATING_BROWSER_GENERAL=\u0644\u0645 \u064a\u062a\u0645\u0643\u0646 LimeWire \u0645\u0646 \u062a\u062d\u062f\u064a\u062f \u0627\u0644\u0645\u062a\u0635\u0641\u062d \u0627\u0644\u062a\u0644\u0642\u0627\u0626\u064a \u0627\u0644\u062e\u0627\u0635 \u0628\u0643.
+#### ERROR_OPEN_URL=LimeWire could not locate your web browser to display the following webpage:
+#? ERROR_OPEN_URL=
 #### ERROR_ACCESSING_SAVE_DIRECTORY=Could not access the save directory. Please select a new save directory in the Options menu and try again.
 ERROR_ACCESSING_SAVE_DIRECTORY=\u0644\u0645 \u064a\u062a\u0645 \u0627\u0644\u0648\u0635\u0648\u0644 \u0644\u0645\u062c\u0644\u062f \u0627\u0644\u062d\u0641\u0638. \u0645\u0646 \u0641\u0636\u0644\u0643 \u0627\u062e\u062a\u0631 \u0645\u062c\u0644\u062f\u0627 \u062c\u062f\u064a\u062f\u0627 \u0644\u0644\u062d\u0641\u0638 \u0645\u0646 \u0642\u0627\u0626\u0645\u0629 \u062e\u064a\u0627\u0631\u0627\u062a \u0648\u062d\u0627\u0648\u0644 \u0645\u0631\u0629 \u0623\u062e\u0631\u0649.
 #### ERROR_DEL_META_USER=Cannot remove unsaved info.
@@ -1870,6 +1867,33 @@ ERROR_INVALID_URLS_IN_MAGNET=\u0648\u0627\u062d\u062f\u0629 \u0623\u0648 \u0623\
 #? ERROR_SEARCH_TOO_LARGE=
 #### ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search smaller and try again.
 #? ERROR_XML_SEARCH_TOO_LARGE=
+
+################################################################################
+# Messages for Creative Commons Licensing
+################################################################################
+#### LICENSE_CC_VIEW_LICENSE=View License
+#? LICENSE_CC_VIEW_LICENSE=
+#### LICENSE_CC_TITLE=License Details
+#? LICENSE_CC_TITLE=
+#### LICENSE_CC_LOCATING=LimeWire is currently locating the details of this license.
+#? LICENSE_CC_LOCATING=
+#### LICENSE_CC_UNVERIFIED=LimeWire has not yet verified this license.  Click 'verify' to locate the details of this Creative Commons license.
+#? LICENSE_CC_UNVERIFIED=
+#### LICENSE_CC_VERIFY=Verify
+#? LICENSE_CC_VERIFY=
+#### LICENSE_CC_INVALID=LimeWire was unable to locate the details of this license.
+#? LICENSE_CC_INVALID=
+#### LICENSE_CC_RETRY=You can try validating this license again by clicking 'Verify'.
+#? LICENSE_CC_RETRY=
+#### LICENSE_CC_DETAILS=License Details:
+#? LICENSE_CC_DETAILS=
+#### LICENSE_CC_CLAIMED_DEED=View Claimed License Deed
+#? LICENSE_CC_CLAIMED_DEED=
+#### LICENSE_CC_DEED=View License Deed
+#? LICENSE_CC_DEED=
+#### LICENSE_CC_VERIFICATION=View Verification Page
+#? LICENSE_CC_VERIFICATION=
+
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
