--- a/lib/messagebundles/MessagesBundle_ro.properties
+++ b/lib/messagebundles/MessagesBundle_ro.properties
@@ -12,6 +12,7 @@ LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin (Other)
 LOCALE_ENGLISH_LANGUAGE_NAME=Romanian
+LOCALE_NSIS_NAME=Romanian
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
@@ -146,8 +147,8 @@ ABOUT_TITLE=Despre LimeWire
 ABOUT_LABEL_START=Clientul LimeWire
 #### ABOUT_LABEL_ADDRESS=http://www.limewire.com
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-#### ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
-ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
+#### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
+ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 #### ABOUT_LABEL_TITLE=About LimeWire
 ABOUT_LABEL_TITLE=Despre LimeWire
 #### ABOUT_CREDITS_LABEL=Credits
@@ -687,6 +688,8 @@ RESULT_PANEL_COUNT=Num.
 #? RESULT_PANEL_VENDOR=
 #### RESULT_PANEL_ADDED=Created
 #? RESULT_PANEL_ADDED=
+#### RESULT_PANEL_LICENSE=License
+#? RESULT_PANEL_LICENSE=
 
 #Filter labels.
 #### SEARCH_FILTER_ALL=All
@@ -1163,6 +1166,8 @@ LIBRARY_TABLE_PATH=Cale
 #? LIBRARY_TABLE_HITCOUNT=
 #### LIBRARY_TABLE_NUMALTLOC=Locations
 LIBRARY_TABLE_NUMALTLOC=Locatie
+#### LIBRARY_TABLE_LICENSE=License
+#? LIBRARY_TABLE_LICENSE=
 #### LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TABLE_UPLOAD_COUNT=Upload-uri
 #### LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
@@ -1410,6 +1415,8 @@ XML_SEARCH_MORE_OPTIONS_LABEL=Mai multe optiuni
 #? META_EDITOR_ACTION_LABEL=
 #### META_EDITOR_STARS_LABEL=Stars:
 #? META_EDITOR_STARS_LABEL=
+#### META_EDITOR_LICENSE_LABEL=License:
+#? META_EDITOR_LICENSE_LABEL=
 
 #### META_EDITOR_SIZE_LABEL=Size:
 #? META_EDITOR_SIZE_LABEL=
@@ -1804,18 +1811,8 @@ ERROR_ALREADY_DOWNLOADING=Deja faceti descarcarea
 #? ERROR_CANT_RESUME_START=
 #### ERROR_CANT_RESUME_END=is not a valid incomplete file and cannot be resumed.
 #? ERROR_CANT_RESUME_END=
-#### ERROR_LOCATING_BROWSER_THEMES=LimeWire could not locate your browser. The LimeWire skins address is:\n"http://www.limewire.com/skins".
-#? ERROR_LOCATING_BROWSER_THEMES=
-#### ERROR_LOCATING_BROWSER_SUPPORT=LimeWire could not locate your browser. The LimeWire support address is:\n"http://www.limewire.com/support".
-ERROR_LOCATING_BROWSER_SUPPORT=LimeWire nu poate localiza browser-ul din sistem. Adresa suportului LimeWire este:\n"http://www.limewire.com/support".
-#### ERROR_LOCATING_BROWSER_FAQ=LimeWire could not locate your browser. The LimeWire FAQ address is:\n"http://www.limewire.com/support/faq.htm".
-ERROR_LOCATING_BROWSER_FAQ=LimeWire nu poate localiza browser-ul din sistem. Adresa FAQ LimeWire este:\n"http://www.limewire.com/faq.html".
-#### ERROR_LOCATING_BROWSER_FORUM=LimeWire could not locate your browser. The LimeWire forum address is:\n"http://www.limewire.com/forum.htm".
-ERROR_LOCATING_BROWSER_FORUM=LimeWire nu poate localiza browser-ul din sistem. Adresa forumului LimeWire este:\n"http://www.limewire.com/forum.html".
-#### ERROR_LOCATING_BROWSER_FRIEND=LimeWire could not locate your browser. The LimeWire "Tell a friend" form address is:\n"http://www.limewire.com/index.jsp/tell_friend".
-ERROR_LOCATING_BROWSER_FRIEND=LimeWire nu poate localiza browser-ul din sistem. Adresa formularului LimeWire "Spune unui prieten/Tell a friend" este:\n"http://www.limewire.com/index.jsp/tell_friend".
-#### ERROR_LOCATING_BROWSER_GENERAL=LimeWire could not locate your default browser.
-ERROR_LOCATING_BROWSER_GENERAL=LimeWire nu poate localiza browser-ul din sistem.
+#### ERROR_OPEN_URL=LimeWire could not locate your web browser to display the following webpage:
+#? ERROR_OPEN_URL=
 #### ERROR_ACCESSING_SAVE_DIRECTORY=Could not access the save directory. Please select a new save directory in the Options menu and try again.
 ERROR_ACCESSING_SAVE_DIRECTORY=Nu pot accesa directorul de salvare. Va rugam selectati alt director in meniul de Optiuni si incercati din nou.
 #### ERROR_DEL_META_USER=Cannot remove unsaved info.
@@ -1870,6 +1867,33 @@ ERROR_BROWSE_HOST_FAILED_END_KEY=.
 #? ERROR_SEARCH_TOO_LARGE=
 #### ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search smaller and try again.
 #? ERROR_XML_SEARCH_TOO_LARGE=
+
+################################################################################
+# Messages for Creative Commons Licensing
+################################################################################
+#### LICENSE_CC_VIEW_LICENSE=View License
+#? LICENSE_CC_VIEW_LICENSE=
+#### LICENSE_CC_TITLE=License Details
+#? LICENSE_CC_TITLE=
+#### LICENSE_CC_LOCATING=LimeWire is currently locating the details of this license.
+#? LICENSE_CC_LOCATING=
+#### LICENSE_CC_UNVERIFIED=LimeWire has not yet verified this license.  Click 'verify' to locate the details of this Creative Commons license.
+#? LICENSE_CC_UNVERIFIED=
+#### LICENSE_CC_VERIFY=Verify
+#? LICENSE_CC_VERIFY=
+#### LICENSE_CC_INVALID=LimeWire was unable to locate the details of this license.
+#? LICENSE_CC_INVALID=
+#### LICENSE_CC_RETRY=You can try validating this license again by clicking 'Verify'.
+#? LICENSE_CC_RETRY=
+#### LICENSE_CC_DETAILS=License Details:
+#? LICENSE_CC_DETAILS=
+#### LICENSE_CC_CLAIMED_DEED=View Claimed License Deed
+#? LICENSE_CC_CLAIMED_DEED=
+#### LICENSE_CC_DEED=View License Deed
+#? LICENSE_CC_DEED=
+#### LICENSE_CC_VERIFICATION=View Verification Page
+#? LICENSE_CC_VERIFICATION=
+
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
