--- a/lib/messagebundles/MessagesBundle_zh.properties
+++ b/lib/messagebundles/MessagesBundle_zh.properties
@@ -12,6 +12,7 @@ LOCALE_VARIANT_NAME=\u56fd\u9645
 LOCALE_SCRIPT_CODE=Hani
 LOCALE_SCRIPT_NAME=Far-East Asian
 LOCALE_ENGLISH_LANGUAGE_NAME=Chinese (Simplified)
+LOCALE_NSIS_NAME=SimpChinese
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
@@ -146,8 +147,8 @@ ABOUT_TITLE=\u5173\u4e8e LimeWire
 ABOUT_LABEL_START=LimeWire \u5ba2\u6237\u7aef, \u7248\u672c
 #### ABOUT_LABEL_ADDRESS=http://www.limewire.com
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
-#### ABOUT_LABEL_END=Copyright (c)2000-2004 Lime Wire LLC
-ABOUT_LABEL_END=\u7248\u6743 \u6240\u6709 (c)2000-2004 Lime Wire LLC
+#### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
+ABOUT_LABEL_END=\u7248\u6743 \u6240\u6709 (c)2000-2005 Lime Wire LLC
 #### ABOUT_LABEL_TITLE=About LimeWire
 ABOUT_LABEL_TITLE=\u5173\u4e8e LimeWire
 #### ABOUT_CREDITS_LABEL=Credits
@@ -687,6 +688,8 @@ RESULT_PANEL_COUNT=#
 RESULT_PANEL_VENDOR=\u8f6f\u4ef6
 #### RESULT_PANEL_ADDED=Created
 #? RESULT_PANEL_ADDED=
+#### RESULT_PANEL_LICENSE=License
+#? RESULT_PANEL_LICENSE=
 
 #Filter labels.
 #### SEARCH_FILTER_ALL=All
@@ -1163,6 +1166,8 @@ LIBRARY_TABLE_PATH=\u8def\u5f84
 LIBRARY_TABLE_HITCOUNT=\u547d\u4e2d
 #### LIBRARY_TABLE_NUMALTLOC=Locations
 LIBRARY_TABLE_NUMALTLOC=\u4f4d\u7f6e
+#### LIBRARY_TABLE_LICENSE=License
+#? LIBRARY_TABLE_LICENSE=
 #### LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TABLE_UPLOAD_COUNT=\u4e0a\u8f7d
 #### LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
@@ -1410,6 +1415,8 @@ META_EDITOR_SHA1_LABEL=SHA1:
 #? META_EDITOR_ACTION_LABEL=
 #### META_EDITOR_STARS_LABEL=Stars:
 #? META_EDITOR_STARS_LABEL=
+#### META_EDITOR_LICENSE_LABEL=License:
+#? META_EDITOR_LICENSE_LABEL=
 
 #### META_EDITOR_SIZE_LABEL=Size:
 META_EDITOR_SIZE_LABEL=\u5927\u5c0f:
@@ -1804,18 +1811,8 @@ ERROR_ALREADY_DOWNLOADING=\u4f60 \u5df2\u7ecf\u5728 \u4e0b\u8f7d\u4e86
 #? ERROR_CANT_RESUME_START=
 #### ERROR_CANT_RESUME_END=is not a valid incomplete file and cannot be resumed.
 #? ERROR_CANT_RESUME_END=
-#### ERROR_LOCATING_BROWSER_THEMES=LimeWire could not locate your browser. The LimeWire skins address is:\n"http://www.limewire.com/skins".
-ERROR_LOCATING_BROWSER_THEMES=LimeWire \u4e0d\u80fd \u5b9a\u4f4d \u4f60\u7684 \u6d4f\u89c8\u5668. LimeWire \u76ae\u80a4 \u5730\u5740\u662f:\n"http://www.limewire.com/skins".
-#### ERROR_LOCATING_BROWSER_SUPPORT=LimeWire could not locate your browser. The LimeWire support address is:\n"http://www.limewire.com/support".
-ERROR_LOCATING_BROWSER_SUPPORT=LimeWire \u4e0d\u80fd \u5b9a\u4f4d \u4f60\u7684 \u6d4f\u89c8\u5668. LimeWire \u6280\u672f\u652f\u6301 \u5730\u5740\u662f:\n\u201chttp://www.limewire.com/support\u201d.
-#### ERROR_LOCATING_BROWSER_FAQ=LimeWire could not locate your browser. The LimeWire FAQ address is:\n"http://www.limewire.com/support/faq.htm".
-ERROR_LOCATING_BROWSER_FAQ=LimeWire \u4e0d\u80fd \u5b9a\u4f4d \u4f60\u7684 \u6d4f\u89c8\u5668. LimeWire \u5e38\u89c1\u95ee\u9898\u89e3\u7b54 \u5730\u5740\u662f:\n\u201chttp://www.limewire.com/support/faq.htm\u201d.
-#### ERROR_LOCATING_BROWSER_FORUM=LimeWire could not locate your browser. The LimeWire forum address is:\n"http://www.limewire.com/forum.htm".
-ERROR_LOCATING_BROWSER_FORUM=LimeWire \u4e0d\u80fd \u5b9a\u4f4d \u4f60\u7684 \u6d4f\u89c8\u5668. LimeWire \u8bba\u575b forum \u5730\u5740\u662f:\n\u201chttp://www.limewire.com/forum.htm\u201d.
-#### ERROR_LOCATING_BROWSER_FRIEND=LimeWire could not locate your browser. The LimeWire "Tell a friend" form address is:\n"http://www.limewire.com/index.jsp/tell_friend".
-ERROR_LOCATING_BROWSER_FRIEND=LimeWire \u4e0d\u80fd \u5b9a\u4f4d \u4f60\u7684 \u6d4f\u89c8\u5668. LimeWire \u201c\u544a\u8bc9 \u4f60\u7684 \u670b\u53cb\u201d \u5730\u5740\u662f:\n\u201chttp://www.limewire.com/index.jsp/tell_friend\u201d.
-#### ERROR_LOCATING_BROWSER_GENERAL=LimeWire could not locate your default browser.
-ERROR_LOCATING_BROWSER_GENERAL=LimeWire \u4e0d\u80fd \u5b9a\u4f4d \u4f60 \u7f3a\u7701\u7684 \u6d4f\u89c8\u5668.
+#### ERROR_OPEN_URL=LimeWire could not locate your web browser to display the following webpage:
+#? ERROR_OPEN_URL=
 #### ERROR_ACCESSING_SAVE_DIRECTORY=Could not access the save directory. Please select a new save directory in the Options menu and try again.
 ERROR_ACCESSING_SAVE_DIRECTORY=\u4e0d\u80fd \u5b58\u53d6 \u4fdd\u5b58 \u6587\u4ef6\u5939. \u8bf7\u518d \u9009\u9879\u4e2d \u9009\u62e9 \u4e00\u4e2a \u65b0\u7684 \u6587\u4ef6\u5939, \u7136\u540e \u518d\u8bd5.
 #### ERROR_DEL_META_USER=Cannot remove unsaved info.
@@ -1870,6 +1867,33 @@ ERROR_THEME_OUT_OF_DATE_LATER=\u4ee5\u540e \u518d\u8bf4
 #? ERROR_SEARCH_TOO_LARGE=
 #### ERROR_XML_SEARCH_TOO_LARGE=Your search is too specific. Please make your search smaller and try again.
 #? ERROR_XML_SEARCH_TOO_LARGE=
+
+################################################################################
+# Messages for Creative Commons Licensing
+################################################################################
+#### LICENSE_CC_VIEW_LICENSE=View License
+#? LICENSE_CC_VIEW_LICENSE=
+#### LICENSE_CC_TITLE=License Details
+#? LICENSE_CC_TITLE=
+#### LICENSE_CC_LOCATING=LimeWire is currently locating the details of this license.
+#? LICENSE_CC_LOCATING=
+#### LICENSE_CC_UNVERIFIED=LimeWire has not yet verified this license.  Click 'verify' to locate the details of this Creative Commons license.
+#? LICENSE_CC_UNVERIFIED=
+#### LICENSE_CC_VERIFY=Verify
+#? LICENSE_CC_VERIFY=
+#### LICENSE_CC_INVALID=LimeWire was unable to locate the details of this license.
+#? LICENSE_CC_INVALID=
+#### LICENSE_CC_RETRY=You can try validating this license again by clicking 'Verify'.
+#? LICENSE_CC_RETRY=
+#### LICENSE_CC_DETAILS=License Details:
+#? LICENSE_CC_DETAILS=
+#### LICENSE_CC_CLAIMED_DEED=View Claimed License Deed
+#? LICENSE_CC_CLAIMED_DEED=
+#### LICENSE_CC_DEED=View License Deed
+#? LICENSE_CC_DEED=
+#### LICENSE_CC_VERIFICATION=View Verification Page
+#? LICENSE_CC_VERIFICATION=
+
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
